Closed Bug 970775 Opened 10 years ago Closed 10 years ago

CopyTex(Sub)Image2D can generate the wrong error

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

Attachments

(2 files)

I was adding more asserts to various parts of WebGLFramebuffer, and started seeing an assert that we were asking whether a null attachment has alpha or not.

It looks like we will erroneously generate INVALID_OPERATION instead of INVALID_FRAMEBUFFER_OPERATION if the CopyTexImage2D is called while an FB with no color-attachment0 is bound, and our goal texture internalFormat has alpha, instead of generating INVALID_FB_OP because the FB is incomplete.
Attachment #8373849 - Flags: review?(bjacob)
Attachment #8373851 - Flags: review?(bjacob)
A try run with the asserts, but not the fixup patch:
https://tbpl.mozilla.org/?tree=Try&rev=783cc0ae69c2

Note the asserts.
Attachment #8373849 - Flags: review?(bjacob) → review+
Attachment #8373851 - Flags: review?(bjacob) → review+
https://hg.mozilla.org/mozilla-central/rev/e8a7d2c8607c
https://hg.mozilla.org/mozilla-central/rev/37b53e9bf06f
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Depends on: 973394
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: