Bug 970775 - Fix error gen'd by CopyTex(Sub)Image2D for incomplete FBs. - r=bjacob